--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 
     <!-- Place favicon.ico in the root directory -->
 
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
